--- a/packages/b/package.json
+++ b/packages/b/package.json
@@ -9,6 +9,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sachingodishela/a": "^1.0.0"
+    "@sachingodishela/a": "1.0.0"
   }
 }
