--- a/packages/d/package.json
+++ b/packages/d/package.json
@@ -9,8 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@sachingodishela/a": "^1.0.0",
-    "@sachingodishela/b": "^1.0.0",
-    "@sachingodishela/c": "^1.0.0"
+    "@sachingodishela/a": "1.0.0",
+    "@sachingodishela/b": "1.0.0",
+    "@sachingodishela/c": "1.0.0"
   }
 }
